// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<System /> matches snapshot with known data 1`] = `
<div
  className="systemDetails centerContent"
>
  <h2>
    System X
  </h2>
  <span
    className="badge criticalityHigh"
  >
    Criticality 
    High
  </span>
  <span
    className="badge investEvergreen"
  >
    Evergreen
  </span>
  <ul>
    <li>
      Portfolio: 
      Portfolio Y
    </li>
    <li>
      <span>
        Last Updated: 
        February 2020
      </span>
    </li>
    <li>
      Aliases: 
      sys X, project Jupiter
    </li>
  </ul>
  <h3>
    Description
  </h3>
  <p>
    The description
  </p>
  <h3>
    Contacts
  </h3>
  <ul>
    <li>
      <span
        className="contact"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        System Register Owner
        : 
        <strong
          className="highRisk"
        >
          Unknown
        </strong>
      </span>
    </li>
  </ul>
  <ul>
    <li>
      Developed By: 
      Dev Team
    </li>
    <li>
      Supported By: 
      Support Team
    </li>
  </ul>
  <ul>
    <li>
      <span
        className="contact"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        Business Owner
        : 
        I own the business
      </span>
    </li>
    <li>
      <span
        className="contact"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        Technical Owner
        : 
        I own the tech
      </span>
    </li>
    <li>
      <span
        className="contact"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        Service Owner
        : 
        I own the service
      </span>
    </li>
    <li>
      <span
        className="contact"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        Product Owner
        : 
        I own the product
      </span>
    </li>
    <li>
      <span
        className="contact"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        Information Asset Owner
        : 
        I own the data
      </span>
    </li>
  </ul>
  <h3>
    Risk
  </h3>
  <div
    className="riskContainer"
  >
    <div
      className="riskSummary"
    >
      <h4>
        Roadmap
      </h4>
      <span
        className="badge highRiskBackground"
      >
        Risk: 
        High
      </span>
      <p>
        Rationale: 
        there is no plan
      </p>
    </div>
    <div
      className="riskSummary"
    >
      <h4>
        Tech Stack
      </h4>
      <span
        className="badge lowRiskBackground"
      >
        Risk: 
        Low
      </span>
      <p>
        Rationale: 
        Really good tech
      </p>
    </div>
  </div>
</div>
`;

exports[`<System /> matches snapshot with unknown data 1`] = `
<div
  className="systemDetails centerContent"
>
  <h2>
    System X
  </h2>
  <span
    className="badge criticalityUnknown"
  >
    Criticality 
    Unknown
  </span>
  <span
    className="badge investmentUnknown"
  >
    Investment Unknown
  </span>
  <ul>
    <li>
      Portfolio: 
      <strong
        className="highRisk"
      >
        Unknown
      </strong>
    </li>
    <li>
      <span>
        Last Updated: 
        <strong
          className="highRisk"
        >
          Never
        </strong>
      </span>
    </li>
    <li>
      Aliases: 
      None
    </li>
  </ul>
  <h3>
    Description
  </h3>
  <p>
    <strong
      className="highRisk"
    >
      Unknown
    </strong>
  </p>
  <h3>
    Contacts
  </h3>
  <ul>
    <li>
      <span
        className="contact"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        System Register Owner
        : 
        <strong
          className="highRisk"
        >
          Unknown
        </strong>
      </span>
    </li>
  </ul>
  <ul>
    <li>
      Developed By: 
      <strong
        className="highRisk"
      >
        Unknown
      </strong>
    </li>
    <li>
      Supported By: 
      <strong
        className="highRisk"
      >
        Unknown
      </strong>
    </li>
  </ul>
  <ul>
    <li>
      <span
        className="contact"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        Business Owner
        : 
        <strong
          className="highRisk"
        >
          Unknown
        </strong>
      </span>
    </li>
    <li>
      <span
        className="contact"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        Technical Owner
        : 
        <strong
          className="highRisk"
        >
          Unknown
        </strong>
      </span>
    </li>
    <li>
      <span
        className="contact"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        Service Owner
        : 
        <strong
          className="highRisk"
        >
          Unknown
        </strong>
      </span>
    </li>
    <li>
      <span
        className="contact"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        Product Owner
        : 
        <strong
          className="highRisk"
        >
          Unknown
        </strong>
      </span>
    </li>
    <li>
      <span
        className="contact"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        Information Asset Owner
        : 
        <strong
          className="highRisk"
        >
          Unknown
        </strong>
      </span>
    </li>
  </ul>
  <h3>
    Risk
  </h3>
  <div
    className="riskContainer"
  >
    <div
      className="riskSummary"
    >
      <h4>
        Roadmap
      </h4>
      <span
        className="badge unknownRiskBackground"
      >
        Risk: 
        Unknown
      </span>
      <p>
        Rationale: 
        <strong
          className="highRisk"
        >
          Unknown
        </strong>
      </p>
    </div>
    <div
      className="riskSummary"
    >
      <h4>
        Change
      </h4>
      <span
        className="badge unknownRiskBackground"
      >
        Risk: 
        Unknown
      </span>
      <p>
        Rationale: 
        <strong
          className="highRisk"
        >
          Unknown
        </strong>
      </p>
    </div>
  </div>
</div>
`;
